recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.error
Sierpinski:1: error: not found: value levels
  if (levels==0){
      ^Sierpinski:7: error: not found: value levels
    sierpinski(levels-1,length/2)
               ^Sierpinski:8: error: not found: value avence
    avence(length)
    ^